# CONVOQ

./: README.md
backend/: .gitignore  DockerFile  pyproject.toml  requirements.txt
backend/app/: analysis.py  coach.py  health_score.py  initiation_analysis.py  main.py  parser.py  schema.py  sentiment.py  toxicity.py
backend/app/models/: schema.py
backend/app/services/: analysis.py  cluster.py  coach.py  health_score.py  initiation_analysis.py  parser.py  semantic.py  sentiment.py  toxicity.py  trend_analysis.py
backend/app/utils/: rate_limiter.py  token_counter.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css  main.jsx
frontend/src/api/: chatApi.js
frontend/src/components/: CoachSummary.jsx  ErrorDisplay.jsx  FeaturesScore.jsx  FileUpload.jsx  HistoryList.jsx  OverviewStats.jsx  Participants.jsx  PeakHours.jsx  RelationshipHealthGrid.jsx  ReplyTimeStats.jsx  SemanticVibeCheck.jsx  SentimentAnalysis.jsx  SentimentTimeline.jsx  Sidebar.jsx  UsageQuota.jsx
frontend/src/layouts/: RootLayout.jsx
frontend/src/pages/: AboutPage.jsx  Dashboard.jsx  LandingPage.jsx
frontend/src/services/: api.js
frontend/src/utils/: constants.js
sample_chats/: sample.json  sample1.txt  sample2.txt  sample2_new.txt
