[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "detoxify>=0.5.2",
    "fastapi>=0.124.4",
    "nltk>=3.9.2",
    "pydantic>=2.12.5",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.8.0",
    "uvicorn[standard]>=0.38.0",
]
