[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cachetools>=6.2.4",
    "detoxify>=0.5.2",
    "en-core-web-sm",
    "fastapi>=0.124.4",
    "groq>=1.0.0",
    "nltk>=3.9.2",
    "pydantic>=2.12.5",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.20",
    "scikit-learn>=1.8.0",
    "spacy>=3.7.2,<3.8.0",
    "supabase>=2.27.1",
    "tiktoken>=0.12.0",
    "uvicorn[standard]>=0.38.0",
]

[tool.uv.sources]
en-core-web-sm = { url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.1/en_core_web_sm-3.7.1-py3-none-any.whl" }
